<resources>
    <string name="app_name">DiThi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="BASE_URL">http://192.168.0.135:3000/</string>
</resources>
