<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.product.ManagerActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="Description"
            android:hint="@string/description"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="Type"
            android:hint="@string/type"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="Price"
            android:hint="@string/price"
            android:inputType="text" />

        <Button
            android:textSize="18sp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

</androidx.constraintlayout.widget.ConstraintLayout>