<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    tools:context=".view.main.fragment.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:inputType="textEmailAddress"
        android:autofillHints="Email"
        android:hint="@string/email"
        android:id="@+id/et_email"
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/et_name" />
    <EditText
        android:inputType="text"
        android:autofillHints="Name"
        android:hint="@string/name"
        android:id="@+id/et_name"
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/et_password" />

    <EditText
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="Password"
        android:id="@+id/et_password"
        style="@style/CustomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:textSize="20dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:textSize="20dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/bt_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintWidth_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>